# Fleet_Mangment

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  ruff.toml
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  03245e76bd40_add_telemetry_records_table.py  03703bcbb2ec_add_users_table.py  08fb105ab208_add_organizations_table.py  79e061e2c344_add_driving_event_and_scoring_schema.py  949dfc0a8c86_add_core_fleet_and_trip_tables.py
backend/scripts/: clean_db.py  simulate_pitch_verify.py  verify_endpoints.py
backend/src/evolvex/: __init__.py  main.py
backend/src/evolvex/api/: __init__.py  fleet.py  health.py  simulator.py  telemetry.py  trips.py  websocket.py
backend/src/evolvex/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  websocket.py
backend/src/evolvex/db/: __init__.py  base.py  seed.py
backend/src/evolvex/db/models/: __init__.py  assignment.py  device.py  driver.py  events.py  rules.py  (+6 more)
backend/src/evolvex/engine/: rule_engine.py
backend/src/evolvex/simulator/: __init__.py  runner.py  scenarios.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_database_real.py  test_e2e_pitch.py
backend/tests/unit/: test_alembic_config.py  test_fleet_and_trip_apis.py  test_fleet_and_trip_models.py  test_health.py  test_organization_model.py  test_orm_base.py  test_rule_and_event_models.py  test_rule_engine.py  test_seed.py  test_simulator.py  test_telemetry_api.py  test_telemetry_model.py  test_user_model.py  test_websocket.py
(+28 files in other folders)
